<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 主界面头部工具条 -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="?attr/colorPrimary">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <ImageView
                    android:contentDescription="@string/image_description_1"
                    android:id="@+id/back"
                    android:layout_width="@dimen/view_width_height"
                    android:layout_height="@dimen/view_width_height"
                    android:padding="15dp"
                    android:src="@mipmap/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/activity_main_drawer_item_2"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorText"/>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <!-- 关于我们 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/developer_name_1"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/about_us_margin"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/developer_name_2"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/about_us_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/developer_name_3"
        android:textSize="@dimen/title_size"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/about_us_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/developer_name_4"
        android:layout_gravity="center"
        android:textSize="@dimen/title_size" />

</LinearLayout>
